--- a/Application_Folder/server/.env
+++ b/Application_Folder/server/.env
@@ -1,3 +1,3 @@
 PORT=3000
 
-MONGODB_URI=mongodb+srv://daveshouse44:lBu4htYLuix23aQR@custer1.wwiac.mongodb.net/booksearch?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://daveshouse44:lBu4htYLuix23aQR@custer1.wwiac.mongodb.net/googlebooks?retryWrites=true&w=majority
